5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1758_672.log
== TEST (2019-05-23 10:17:44) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = input("n: ")
print(ones(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:17:50) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = input("n: ")
print(ones(a))
-- EXECUTION TIME:
0.449734
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/672/main.py", line 4, in <module>
    print(ones(a))
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/numeric.py", line 223, in ones
    a = empty(shape, dtype, order)
TypeError: 'str' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:21:15) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = int(input("n: "))
vet = ones(num, dtype=int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:21:21) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = int(input("n: "))
vet = ones(num, dtype=int)
-- EXECUTION TIME:
0.535245
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/672/main.py", line 4, in <module>
    vet = ones(num, dtype=int)
NameError: name 'num' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:21:31) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
num = int(input("n: "))
vet = ones(num, dtype=int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:21:36) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
num = int(input("n: "))
vet = ones(num, dtype=int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:21:39) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
num = int(input("n: "))
vet = ones(num, dtype=int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:24:05) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
num = int(input("n: "))
vet = ones(num, dtype=int)
-- EXECUTION TIME:
0.40765
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:

-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:24:05) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
num = int(input("n: "))
vet = ones(num, dtype=int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:24:07) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
num = int(input("n: "))
vet = ones(num, dtype=int)
-- EXECUTION TIME:
0.402185
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:

-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:24:20) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
num = int(input("n: "))
vet = ones(num, dtype=int)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:24:22) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
num = int(input("n: "))
vet = ones(num, dtype=int)
print(vetor)
-- EXECUTION TIME:
0.268221
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/672/main.py", line 5, in <module>
    print(vetor)
NameError: name 'vetor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:24:23) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
num = int(input("n: "))
vet = ones(num, dtype=int)
print(vetor)
-- EXECUTION TIME:
0.601325
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/672/main.py", line 5, in <module>
    print(vetor)
NameError: name 'vetor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:24:27) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
num = int(input("n: "))
vet = ones(num, dtype=int)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:24:29) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
num = int(input("n: "))
vet = ones(num, dtype=int)
print(vet)
-- EXECUTION TIME:
0.425186
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:24:29) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
num = int(input("n: "))
vet = ones(num, dtype=int)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:24:35) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
num = int(input("n: "))
vet = ones(num, dtype=int)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:24:43) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
num = int(input("n: "))
vet = ones(num, dtype=int)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:24:47) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
num = int(input("n: "))
vet = ones(num, dtype=int)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:24:55) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
num = int(input("n: "))
vet = ones(num, dtype=int)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:25:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
num = int(input("n: "))
vet = dones(num, dtype=int)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
